--- a/notebooks/utils/gencode_gene_trans_map.ipynb
+++ b/notebooks/utils/gencode_gene_trans_map.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -46,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
